# kirigami-noteapp

./: .gitignore  CMakeLists.txt  INDEX.md  MIME_TYPES.md  Makefile  NoteApp.desktop  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  build.sh  install-local.sh  kirigami-notepad.desktop  main.cpp  main.qml  run.sh  test-mime-detection.sh  test_syntax.cpp  test_syntax.json  test_syntax.py  uninstall-local.sh
assets/docs/: DOCUMENTATION_GUIDE.md  INDEX.md  MIME_TYPES.md  QUICKSTART.md  REFACTORING_SUMMARY.md  UNSAVED_CHANGES_FEATURE.md
